updated App component with dpr check and canvas height modification if uneven number, confirmed Html position offset bug is connected to devices with dpr of 3

--- a/src/index.css
+++ b/src/index.css
@@ -7,6 +7,9 @@
 html,
 body,
 #root {
+  position: fixed;
+  top: 0;
+  left: 0;
   width: 100%;
   height: 100%;
   margin: 0;
